cmake_minimum_required(VERSION 3.17)
project(Pre_programming C)

set(CMAKE_C_STANDARD 11)

add_executable(Pre_programming
        "iteration and recursion/find_factorial_5_using_iteration.c"
        "iteration and recursion/sorting/liner_searching_using_recursion.c"
        "iteration and recursion/sorting/liner_searching_using_iteration.c")
